
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_3__ TYPE_1__ ;


typedef int git_signature ;
typedef int git_repository ;
typedef int git_oid ;
struct TYPE_3__ {size_t member_0; int const** member_1; } ;
typedef TYPE_1__ commit_parent_oids ;


 int commit_parent_from_ids ;
 int git_commit__create_internal (int *,int *,char const*,int const*,int const*,char const*,char const*,int const*,int ,TYPE_1__*,int) ;

int git_commit_create_from_ids(
 git_oid *id,
 git_repository *repo,
 const char *update_ref,
 const git_signature *author,
 const git_signature *committer,
 const char *message_encoding,
 const char *message,
 const git_oid *tree,
 size_t parent_count,
 const git_oid *parents[])
{
 commit_parent_oids data = { parent_count, parents };

 return git_commit__create_internal(
  id, repo, update_ref, author, committer,
  message_encoding, message, tree,
  commit_parent_from_ids, &data, 1);
}
