; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_commit.c_git_commit_create_from_ids.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_commit.c_git_commit_create_from_ids.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32** }

@commit_parent_from_ids = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_commit_create_from_ids(i32* %0, i32* %1, i8* %2, i32* %3, i32* %4, i8* %5, i8* %6, i32* %7, i64 %8, i32** %9) #0 {
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i8*, align 8
  %18 = alloca i32*, align 8
  %19 = alloca i64, align 8
  %20 = alloca i32**, align 8
  %21 = alloca %struct.TYPE_3__, align 8
  store i32* %0, i32** %11, align 8
  store i32* %1, i32** %12, align 8
  store i8* %2, i8** %13, align 8
  store i32* %3, i32** %14, align 8
  store i32* %4, i32** %15, align 8
  store i8* %5, i8** %16, align 8
  store i8* %6, i8** %17, align 8
  store i32* %7, i32** %18, align 8
  store i64 %8, i64* %19, align 8
  store i32** %9, i32*** %20, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i64, i64* %19, align 8
  store i64 %23, i64* %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 1
  %25 = load i32**, i32*** %20, align 8
  store i32** %25, i32*** %24, align 8
  %26 = load i32*, i32** %11, align 8
  %27 = load i32*, i32** %12, align 8
  %28 = load i8*, i8** %13, align 8
  %29 = load i32*, i32** %14, align 8
  %30 = load i32*, i32** %15, align 8
  %31 = load i8*, i8** %16, align 8
  %32 = load i8*, i8** %17, align 8
  %33 = load i32*, i32** %18, align 8
  %34 = load i32, i32* @commit_parent_from_ids, align 4
  %35 = call i32 @git_commit__create_internal(i32* %26, i32* %27, i8* %28, i32* %29, i32* %30, i8* %31, i8* %32, i32* %33, i32 %34, %struct.TYPE_3__* %21, i32 1)
  ret i32 %35
}

declare dso_local i32 @git_commit__create_internal(i32*, i32*, i8*, i32*, i32*, i8*, i8*, i32*, i32, %struct.TYPE_3__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
